--- a/src/App.css
+++ b/src/App.css
@@ -4,4 +4,7 @@
 
 body {
   background-color: #1a4266;
+  background-image: url(Asset/Background/Background-5.jpg);
+  background-repeat: no-repeat;
+  background-size: cover;
 }
