--- a/src/Components/CurrentWeatherData.css
+++ b/src/Components/CurrentWeatherData.css
@@ -1,3 +1,7 @@
-#mainWeatherData {
+#main-weather-data {
   color: #ffffff;
+  border: solid;
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
 }
