--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,4 @@
 /* ############### Fonts ############### */
-
 @import url("https://fonts.googleapis.com/css2?family=Cinzel&display=swap");
 /* font-family: "Cinzel", serif; */
 @import url("https://fonts.googleapis.com/css2?family=Open+Sans+Condensed:wght@300&display=swap");
@@ -12,26 +11,13 @@
 /* font-family: 'Sulphur Point', sans-serif; */
 @import url("https://fonts.googleapis.com/css2?family=Lato:wght@900&display=swap");
 /* font-family: 'Lato', sans-serif; */
-@import url("https://fonts.googleapis.com/css2?family=Oswald&display=swap");
-/* font-family: 'Oswald', sans-serif; */
+@import url("https://fonts.googleapis.com/css2?family=Dosis:wght@700&display=swap");
+/* font-family: 'Dosis', sans-serif; */
 
 /* ############### Default Style ############### */
 
 * {
   font-family: "Sulphur Point", sans-serif;
-}
-
-.btn {
-  background: transparent;
-  border-radius: 0;
-  border-radius: 1px;
-  border-color: #ffffff;
-}
-
-.btn:hover {
-  border-color: #80bdff;
-  background-color: transparent;
-  color: #80bdff;
 }
 
 html,
@@ -47,7 +33,43 @@ body {
   background-size: cover;
 }
 
+.btn {
+  background: transparent;
+  border-radius: 0;
+  border-radius: 1px;
+  border-color: #ffffff;
+}
+
 /* ############### App Style ############### */
+.btn:hover {
+  border-color: #80bdff;
+  background-color: transparent;
+  color: #80bdff;
+}
+
+.btn:not(:disabled):not(.disabled):active {
+  border-color: #80bdff;
+  background-color: transparent;
+  color: #80bdff;
+}
+
+.btn:focus-visible {
+  box-shadow: inset 0 0 0px 0;
+  background: transparent;
+  border-radius: 0;
+  border-radius: 1px;
+  border-color: #3adde2;
+  color: #3adde2;
+}
+
+.btn:focus-within {
+  box-shadow: inset 0 0 0px 0;
+  background: transparent;
+  border-radius: 0;
+  border-radius: 1px;
+  color: #3adde2;
+  border-color: #3adde2;
+}
 
 #main {
   filter: drop-shadow(3px 4px 9px #000000);
@@ -78,13 +100,15 @@ body {
 }
 
 .weather-info {
-  display: inline-block;
+  display: inline-flex;
+  align-items: center;
   position: absolute;
   top: 55%;
   left: 0;
-  right: 50%;
-  bottom: 0;
+  right: 0;
+  bottom: 20%;
   color: #ffffff;
+  margin-left: 5rem;
 }
 
 .temperature {
@@ -92,9 +116,19 @@ body {
   margin-right: 5px;
 }
 
+.date {
+  display: block;
+  background: #ffffff;
+  color: #000000;
+  mix-blend-mode: screen;
+  padding: 0 10px;
+  font-family: "Dosis", sans-serif;
+}
+
 .location {
+  display: flex;
   color: #ffffff;
-  font-family: "Oswald", sans-serif;
+  font-family: "Dosis", sans-serif;
 }
 
 .img-weather {
