--- a/src/App.css
+++ b/src/App.css
@@ -21,6 +21,7 @@
 }
 
 html,
+#root,
 body {
   height: 100%;
   text-align: center;
@@ -36,7 +37,6 @@ body {
 .btn {
   background: transparent;
   border-radius: 0;
-  border-radius: 1px;
   border-color: #ffffff;
 }
 
@@ -57,7 +57,6 @@ body {
   box-shadow: inset 0 0 0px 0;
   background: transparent;
   border-radius: 0;
-  border-radius: 1px;
   border-color: #3adde2;
   color: #3adde2;
 }
@@ -66,7 +65,6 @@ body {
   box-shadow: inset 0 0 0px 0;
   background: transparent;
   border-radius: 0;
-  border-radius: 1px;
   color: #3adde2;
   border-color: #3adde2;
 }
@@ -156,5 +154,3 @@ body {
 
 .btn-reset-weather {
 }
-
-
