--- a/src/App.css
+++ b/src/App.css
@@ -15,7 +15,6 @@
 /* font-family: 'Dosis', sans-serif; */
 
 /* ############### Default Style ############### */
-
 * {
   font-family: "Sulphur Point", sans-serif;
 }
@@ -27,302 +26,194 @@ body {
   text-align: center;
 }
 
-#root {
-  display: flex;
-  align-items: center;
-}
-
-html {
-  display: flex;
-}
-
-body {
-  background-image: url(Asset/Background/background-weather.jpg);
-  backdrop-filter: blur(10px);
-  background-repeat: no-repeat;
-  background-size: cover;
-  flex: 1;
-}
-
-.btn {
-  background: transparent;
-  border-radius: 0;
-  border-color: #ffffff;
-  transition: all 0.3s ease 0.1s;
-}
-
-/* ############### App Style ############### */
-.btn:hover {
-  border-color: #80bdff;
-  background-color: transparent;
-  color: #80bdff;
-}
-
-.btn:not(:disabled):not(.disabled):active {
-  border-color: #80bdff;
-  background-color: transparent;
-  color: #80bdff;
-}
-
-.btn:focus-visible {
-  box-shadow: inset 0 0 0px 0;
-  background: transparent;
-  border-radius: 0;
-  border-color: #3adde2;
-  color: #3adde2;
-}
-
-.btn:focus-within {
-  box-shadow: inset 0 0 0px 0;
-  background: transparent;
-  border-radius: 0;
-  color: #3adde2;
-  border-color: #3adde2;
-}
-
-#main {
-  filter: drop-shadow(3px 4px 9px #000000);
-  text-align: center;
-}
-
-#background-weather {
-  background-image: url(Asset/Background/background-weather.jpg);
-  background-repeat: no-repeat;
-  background-size: cover;
-  position: absolute;
-  top: 0;
-  left: 0;
-  bottom: 0;
-  right: 0;
-  z-index: 1;
-}
-
-.blur-background-weather {
-  backdrop-filter: blur(10px);
-  position: absolute;
-  top: 0;
-  left: 0;
-  bottom: 0;
-  right: 0;
-  z-index: 1;
-}
-
-.weather-info {
-  display: inline-flex;
-  align-items: center;
-  position: absolute;
-  top: 55%;
-  left: 0;
-  right: 0;
-  bottom: 20%;
-  color: #ffffff;
-  margin-left: 5rem;
-}
-
-.temperature {
-  font-size: 100px;
-  margin-right: 5px;
-}
-
-.date {
-  display: block;
-  background: #ffffff;
-  color: #000000;
-  mix-blend-mode: screen;
-  padding: 0 10px;
-  font-family: "Dosis", sans-serif;
-}
-
-.location {
-  display: flex;
-  color: #ffffff;
-  font-family: "Dosis", sans-serif;
-}
-
-.img-weather {
-  width: 100%;
-}
-
-.forecast-data {
-  color: #ffffff;
-  display: flex;
-  margin-top: 10px;
-}
-
-.leftside-forecast-weather {
-  display: block;
-  text-align: left;
-  width: 100%;
-  margin-left: 10px;
-}
-.rightside-forecast-weather {
-  display: block;
-  text-align: right;
-  width: 100%;
-  margin-right: 10px;
-}
 /* ############## Responsive App ############## */
+/* .col-1 {
+  width: 8.33%;
+}
+.col-2 {
+  width: 16.66%;
+}
+.col-3 {
+  width: 25%;
+}
+.col-4 {
+  width: 33.33%;
+}
+.col-5 {
+  width: 41.66%;
+}
+.col-6 {
+  width: 50%;
+}
+.col-7 {
+  width: 58.33%;
+}
+.col-8 {
+  width: 66.66%;
+}
+.col-9 {
+  width: 75%;
+}
+.col-10 {
+  width: 83.33%;
+}
+.col-11 {
+  width: 91.66%;
+}
+.col-12 {
+  width: 100%;
+} */
 
 /* Extra small devices (phones, 600px and down) */
 
 @media only screen and (max-width: 600px) {
-  .col-m-1 {
-    width: 8.33%;
-  }
-  .col-m-2 {
-    width: 16.66%;
-  }
-  .col-m-3 {
-    width: 25%;
-  }
-  .col-m-4 {
-    width: 33.33%;
-  }
-  .col-m-5 {
-    width: 41.66%;
-  }
-  .col-m-6 {
-    width: 50%;
-  }
-  .col-m-7 {
-    width: 58.33%;
-  }
-  .col-m-8 {
-    width: 66.66%;
-  }
-  .col-m-9 {
-    width: 75%;
-  }
-  .col-m-10 {
-    width: 83.33%;
-  }
-  .col-m-11 {
-    width: 91.66%;
-  }
-  .col-m-12 {
-    width: 100%;
-  }
 }
 
 /* Small devices (portrait tablets and large phones, 600px and up) */
 
 @media only screen and (min-width: 600px) {
-  .col-lm-pt-1 {
-    width: 8.33%;
-  }
-  .col-lm-pt-2 {
-    width: 16.66%;
-  }
-  .col-lm-pt-3 {
-    width: 25%;
-  }
-  .col-lm-pt-4 {
-    width: 33.33%;
-  }
-  .col-lm-pt-5 {
-    width: 41.66%;
-  }
-  .col-lm-pt-6 {
-    width: 50%;
-  }
-  .col-lm-pt-7 {
-    width: 58.33%;
-  }
-  .col-lm-pt-8 {
-    width: 66.66%;
-  }
-  .col-lm-pt-9 {
-    width: 75%;
-  }
-  .col-lm-pt-10 {
-    width: 83.33%;
-  }
-  .col-lm-pt-11 {
-    width: 91.66%;
-  }
-  .col-lm-pt-12 {
-    width: 100%;
-  }
 }
 
 /* Medium devices (landscape tablets, 768px and up) */
 
 @media only screen and (min-width: 768px) {
-  .col-lt-1 {
-    width: 8.33%;
-  }
-  .col-lt-2 {
-    width: 16.66%;
-  }
-  .col-lt-3 {
-    width: 25%;
-  }
-  .col-lt-4 {
-    width: 33.33%;
-  }
-  .col-lt-5 {
-    width: 41.66%;
-  }
-  .col-lt-6 {
-    width: 50%;
-  }
-  .col-lt-7 {
-    width: 58.33%;
-  }
-  .col-lt-8 {
-    width: 66.66%;
-  }
-  .col-lt-9 {
-    width: 75%;
-  }
-  .col-lt-10 {
-    width: 83.33%;
-  }
-  .col-lt-11 {
-    width: 91.66%;
-  }
-  .col-lt-12 {
-    width: 100%;
-  }
 }
 
 /* Large devices (laptops/desktops, 992px and up) */
 
 @media only screen and (min-width: 992px) {
-  .col-l-d-1 {
-    width: 8.33%;
+  #root {
+    display: flex;
+    align-items: center;
   }
-  .col-l-d-2 {
-    width: 16.66%;
+
+  html {
+    display: flex;
   }
-  .col-l-d-3 {
-    width: 25%;
+
+  body {
+    background-image: url(Asset/Background/background-weather.jpg);
+    backdrop-filter: blur(10px);
+    background-repeat: no-repeat;
+    background-size: cover;
+    flex: 1;
   }
-  .col-l-d-4 {
-    width: 33.33%;
+
+  .btn {
+    background: transparent;
+    border-radius: 0;
+    border-color: #ffffff;
+    transition: all 0.3s ease 0.1s;
   }
-  .col-l-d-5 {
-    width: 41.66%;
+
+  /* ############### App Style ############### */
+  .btn:hover {
+    border-color: #80bdff;
+    background-color: transparent;
+    color: #80bdff;
   }
-  .col-l-d-6 {
-    width: 50%;
+
+  .btn:not(:disabled):not(.disabled):active {
+    border-color: #80bdff;
+    background-color: transparent;
+    color: #80bdff;
   }
-  .col-l-d-7 {
-    width: 58.33%;
+
+  .btn:focus-visible {
+    box-shadow: inset 0 0 0px 0;
+    background: transparent;
+    border-radius: 0;
+    border-color: #3adde2;
+    color: #3adde2;
   }
-  .col-l-d-8 {
-    width: 66.66%;
+
+  .btn:focus-within {
+    box-shadow: inset 0 0 0px 0;
+    background: transparent;
+    border-radius: 0;
+    color: #3adde2;
+    border-color: #3adde2;
   }
-  .col-l-d-9 {
-    width: 75%;
+
+  #main {
+    filter: drop-shadow(3px 4px 9px #000000);
+    text-align: center;
   }
-  .col-l-d-10 {
-    width: 83.33%;
+
+  #background-weather {
+    background-image: url(Asset/Background/background-weather.jpg);
+    background-repeat: no-repeat;
+    background-size: cover;
+    position: absolute;
+    top: 0;
+    left: 0;
+    bottom: 0;
+    right: 0;
+    z-index: 1;
   }
-  .col-l-d-11 {
-    width: 91.66%;
+
+  .blur-background-weather {
+    backdrop-filter: blur(10px);
+    position: absolute;
+    top: 0;
+    left: 0;
+    bottom: 0;
+    right: 0;
+    z-index: 1;
   }
-  .col-l-d-12 {
+
+  .weather-info {
+    display: inline-flex;
+    align-items: center;
+    position: absolute;
+    top: 55%;
+    left: 0;
+    right: 0;
+    bottom: 20%;
+    color: #ffffff;
+    margin-left: 5rem;
+  }
+
+  .temperature {
+    font-size: 100px;
+    margin-right: 5px;
+  }
+
+  .date {
+    display: block;
+    background: #ffffff;
+    color: #000000;
+    mix-blend-mode: screen;
+    padding: 0 10px;
+    font-family: "Dosis", sans-serif;
+  }
+
+  .location {
+    display: flex;
+    color: #ffffff;
+    font-family: "Dosis", sans-serif;
+  }
+
+  .img-weather {
     width: 100%;
+  }
+
+  .forecast-data {
+    color: #ffffff;
+    display: flex;
+    margin-top: 10px;
+  }
+
+  .leftside-forecast-weather {
+    display: block;
+    text-align: left;
+    width: 100%;
+    margin-left: 10px;
+  }
+  .rightside-forecast-weather {
+    display: block;
+    text-align: right;
+    width: 100%;
+    margin-right: 10px;
   }
 }
