--- a/src/Components/CurrentWeatherData.css
+++ b/src/Components/CurrentWeatherData.css
@@ -11,9 +11,50 @@
   margin-left: 10px;
 }
 
-.rightside-current-weather{
+.rightside-current-weather {
   display: block;
   text-align: right;
   width: 100%;
   margin-right: 10px;
+}
+
+/* ############## Responsive App ############## */
+
+/* Extra small devices (phones, 600px and down) */
+
+@media only screen and (max-width: 600px) {
+}
+
+/* Small devices (portrait tablets and large phones, 600px and up) */
+
+@media only screen and (min-width: 600px) {
+}
+
+/* Medium devices (landscape tablets, 768px and up) */
+
+@media only screen and (min-width: 768px) {
+}
+
+/* Large devices (laptops/desktops, 992px and up) */
+
+@media only screen and (min-width: 992px) {
+  #main-weather-data {
+    color: #ffffff;
+    display: flex;
+    margin-top: 10px;
+  }
+
+  .leftside-current-weather {
+    display: block;
+    text-align: left;
+    width: 100%;
+    margin-left: 10px;
+  }
+
+  .rightside-current-weather {
+    display: block;
+    text-align: right;
+    width: 100%;
+    margin-right: 10px;
+  }
 }
