--- a/src/Components/ForecastWeatherData.css
+++ b/src/Components/ForecastWeatherData.css
@@ -1,39 +1,112 @@
-.forecast-info {
-  display: flex;
-}
-
-.forecast-detail {
-  flex: 1;
-  height: 19.3rem;
-  overflow-y: auto;
-  overflow-x: hidden;
-}
-
-.forecast-detail::-webkit-scrollbar {
-  width: 1.1rem;
-}
-
-.forecast-detail::-webkit-scrollbar-track {
-  padding: 0;
-  margin-bottom: 1px;
-  background: transparent;
-  border-radius: 1px;
-}
-
-.forecast-detail::-webkit-scrollbar-thumb {
-  border: 1px solid transparent;
-  border-radius: 0;
-  background: transparent;
-  border-color: #ffffff;
-}
-
-.forecast-detail::-webkit-scrollbar-thumb:hover {
-  border-color: #80bdff;
-}
-
 /* ############## Responsive App ############## */
+@media only screen and (min-width: 1200px) {
+  .forecast-info {
+    display: flex;
+  }
 
-/* Extra small devices (phones, 600px and down) */
+  .forecast-detail {
+    flex: 1;
+    height: 19.3rem;
+    overflow-y: auto;
+    overflow-x: hidden;
+  }
+
+  .forecast-detail::-webkit-scrollbar {
+    width: 1.1rem;
+  }
+
+  .forecast-detail::-webkit-scrollbar-track {
+    padding: 0;
+    margin-bottom: 1px;
+    background: transparent;
+    border-radius: 1px;
+  }
+
+  .forecast-detail::-webkit-scrollbar-thumb {
+    border: 1px solid transparent;
+    border-radius: 0;
+    background: transparent;
+    border-color: #ffffff;
+  }
+
+  .forecast-detail::-webkit-scrollbar-thumb:hover {
+    border-color: #80bdff;
+  }
+}
+
+@media only screen and (min-width: 992px) and (max-width: 1199px) {
+  .forecast-info {
+    display: flex;
+  }
+
+ .btn-forecast-weather {
+   width: 126px;
+ }
+
+  .forecast-detail {
+    flex: 1;
+    height: 11.5rem;
+    overflow-y: auto;
+    overflow-x: hidden;
+  }
+
+  .forecast-detail::-webkit-scrollbar {
+    width: 1.1rem;
+  }
+
+  .forecast-detail::-webkit-scrollbar-track {
+    padding: 0;
+    margin-bottom: 1px;
+    background: transparent;
+    border-radius: 1px;
+  }
+
+  .forecast-detail::-webkit-scrollbar-thumb {
+    border: 1px solid transparent;
+    border-radius: 0;
+    background: transparent;
+    border-color: #ffffff;
+  }
+
+  .forecast-detail::-webkit-scrollbar-thumb:hover {
+    border-color: #80bdff;
+  }
+}
+
+@media only screen and (min-width: 768px) and (max-width: 991px) {
+  .forecast-info {
+    display: flex;
+  }
+
+  .forecast-detail {
+    flex: 1;
+    height: 11.3rem;
+    overflow-y: auto;
+    overflow-x: hidden;
+  }
+
+  .forecast-detail::-webkit-scrollbar {
+    width: 1rem;
+  }
+
+  .forecast-detail::-webkit-scrollbar-track {
+    padding: 0;
+    margin-bottom: 1px;
+    background: transparent;
+    border-radius: 1px;
+  }
+
+  .forecast-detail::-webkit-scrollbar-thumb {
+    border: 1px solid transparent;
+    border-radius: 0;
+    background: transparent;
+    border-color: #ffffff;
+  }
+
+  .forecast-detail::-webkit-scrollbar-thumb:hover {
+    border-color: #80bdff;
+  }
+}
 
 @media only screen and (max-width: 600px) {
 }
@@ -45,10 +118,4 @@
 
 /* Medium devices (landscape tablets, 768px and up) */
 
-@media only screen and (min-width: 768px) {
-}
-
 /* Large devices (laptops/desktops, 992px and up) */
-
-@media only screen and (min-width: 992px) {
-}
