--- a/src/App.css
+++ b/src/App.css
@@ -536,12 +536,175 @@ body {
     margin-right: 10px;
   }
 }
-/* Extra small devices (phones, 600px and down) */
 
-@media only screen and (max-width: 600px) {
+@media only screen and (min-width: 600px) and (max-width: 767px) {
+  #root {
+    display: flex;
+    align-items: center;
+  }
+
+  html {
+    display: flex;
+  }
+
+  body {
+    background-image: url(Asset/Background/background-weather.jpg);
+    backdrop-filter: blur(10px);
+    background-repeat: no-repeat;
+    background-size: cover;
+    flex: 1;
+  }
+
+  .btn {
+    background: transparent;
+    border-radius: 0;
+    border-color: #ffffff;
+    transition: all 0.3s ease 0.1s;
+    font-size: smaller;
+  }
+
+  .btn:hover {
+    border-color: #80bdff;
+    background-color: transparent;
+    color: #80bdff;
+  }
+
+  .btn:not(:disabled):not(.disabled):active {
+    border-color: #80bdff;
+    background-color: transparent;
+    color: #80bdff;
+  }
+
+  .btn:focus-visible {
+    box-shadow: inset 0 0 0px 0;
+    background: transparent;
+    border-radius: 0;
+    border-color: #3adde2;
+    color: #3adde2;
+  }
+
+  .btn:focus-within {
+    box-shadow: inset 0 0 0px 0;
+    background: transparent;
+    border-radius: 0;
+    color: #3adde2;
+    border-color: #3adde2;
+  }
+
+  #main {
+    filter: drop-shadow(3px 4px 9px #000000);
+    text-align: center;
+  }
+
+  #background-weather {
+    background-image: url(Asset/Background/background-weather-4.jpg);
+    background-repeat: no-repeat;
+    background-size: cover;
+    position: absolute;
+    top: 0;
+    left: 0;
+    bottom: 0;
+    right: 0;
+    z-index: 1;
+  }
+
+  .blur-background-weather {
+    backdrop-filter: blur(10px);
+    position: absolute;
+    top: 0;
+    left: 0;
+    bottom: 0;
+    right: 0;
+    z-index: 1;
+  }
+
+  .weather-info {
+    display: inline-flex;
+    align-items: center;
+    position: absolute;
+    top: 54%;
+    left: 0;
+    right: 0;
+    bottom: 21%;
+    color: #ffffff;
+    margin-left: 1.7rem;
+    z-index: 1;
+    mix-blend-mode: screen;
+  }
+
+  .temperature {
+    font-size: 75px;
+    margin-right: 5px;
+  }
+
+  @keyframes Weather {
+    from {
+      transform: translate(50%);
+    }
+    to {
+      transform: translate(0);
+    }
+  }
+
+  .date {
+    display: block;
+    background: #ffffff;
+    color: #000000;
+    mix-blend-mode: screen;
+    padding: 0 10px;
+    font-family: "Righteous", cursive;
+  }
+
+  .location {
+    display: flex;
+    color: #ffffff;
+    font-family: "Righteous", cursive;
+  }
+
+  .icon-weather {
+    filter: invert(1%) sepia(1%) saturate(1%) hue-rotate(1deg) brightness(1000%)
+      contrast(80%);
+    position: absolute;
+    top: 90%;
+    left: 73%;
+    right: 0;
+    bottom: 0;
+    width: 115px;
+    height: 115px;
+  }
+
+  @keyframes iconWeather {
+    from {
+      transform: translate(0, -70%);
+    }
+    to {
+      transform: translate(0, 0);
+    }
+  }
+
+  .img-weather {
+    width: 100%;
+  }
+
+  .forecast-data {
+    color: #ffffff;
+    display: flex;
+    margin-top: 10px;
+  }
+
+  .leftside-forecast-weather {
+    display: block;
+    text-align: left;
+    width: 100%;
+    margin-left: 10px;
+  }
+  .rightside-forecast-weather {
+    display: block;
+    text-align: right;
+    width: 100%;
+    margin-right: 10px;
+  }
 }
 
-/* Small devices (portrait tablets and large phones, 600px and up) */
-
-@media only screen and (min-width: 600px) {
+@media only screen and (max-width: 600px) {
 }
