--- a/src/Components/FormWeather.css
+++ b/src/Components/FormWeather.css
@@ -1,15 +1,4 @@
 /* ############## Responsive App ############## */
-
-/* Extra small devices (phones, 600px and down) */
-
-@media only screen and (max-width: 600px) {
-}
-
-/* Small devices (portrait tablets and large phones, 600px and up) */
-
-@media only screen and (min-width: 600px) {
-}
-
 @media only screen and (min-width: 1200px) {
   #form {
     display: flex;
@@ -146,4 +135,53 @@
     display: inline;
     float: right;
   }
+}
+
+@media only screen and (min-width: 600px) and (max-width: 767px) {
+  #form {
+    display: flex;
+    flex-direction: column;
+    margin-top: 3%;
+  }
+
+  .btn-get-weather {
+    margin-top: 3%;
+  }
+
+  .img-weather {
+    transition: all 0.3s ease 0.1s;
+  }
+
+  .input-location {
+    background: transparent;
+    border-radius: 1px;
+    border-left: 0;
+    border-right: 0;
+    border-top: 0;
+    font-family: "Baloo Tammudu 2", cursive;
+    transition: all 0.3s ease 0.1s;
+    padding-right: 0;
+    font-size: 14px;
+  }
+
+  .input-location:hover {
+    border-bottom-color: #80bdff;
+  }
+
+  .input-location:focus {
+    box-shadow: inset 0 0 0px 0;
+    background: transparent;
+    border-radius: 1px;
+    border-left: 0;
+    border-right: 0;
+    border-top: 0;
+  }
+
+  .btn-weather {
+    display: inline;
+    float: right;
+  }
+}
+
+@media only screen and (max-width: 600px) {
 }
